--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,6 +1,11 @@
-div class='col-xs-3'
 div class='col-xs-6'
   - if @questions.empty?
       | Вопросов пока нет
       p
-        a href='#' Задать вопрос
+        = link_to 'Задать вопрос', new_question_path
+  - else
+      - @questions.each do |q|
+        = q.title
+        = q.body
+      p
+        = link_to 'Задать вопрос', new_question_path
