--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,11 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+blockquote {
+  border-left: 2px solid #eeeeee;
+  font-size: 14px;
+  p:first-child {
+    font-weight: bold;
+  }
+}
