--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,6 +1,4 @@
 / div class='col-xs-6'
-p
-  - if @questions.empty?
-    | Вопросов пока нет
+= render 'questions_list', questions: @questions
 
 = render 'form', question: @question
