--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <%= render "auth_status" %>
+          <%= render "questions/auth_status" %>
           <p class="notice"><%= notice %></p>
           <p class="alert"><%= alert %></p>
           <%= yield %>
