--- a/app/views/questions/_auth_status.html.slim
+++ b/app/views/questions/_auth_status.html.slim
@@ -3,7 +3,7 @@
   p class="navbar-text navbar-right"
     = link_to "Sign out", destroy_user_session_path, method: :delete, :class => "navbar-link"
   p class="navbar-text navbar-right"
-    = link_to current_user.email, '/#', :class => "navbar-link"
+    = link_to current_user.email, edit_user_registration_path, :class => "navbar-link"
 
 - else
   p class="navbar-text navbar-right"
